modified the sendMessageList of the NewMessageInfo to use a sendMessageMap
instead.

added a configurable spam button.

changed the default action of the FolderSelectorPane to be only subscribed
folders.  this also fixes an exception you could get when trying to edit
filters while disconnected from an IMAP server.

040128 release
--------------

added support for S/MIME and OpenPGP encryption.

fixed a bug in which the new message notification didn't appear immediately
on the FolderNode.

fixed a case where hitting 'send' twice could end up sending two copies
of the message.

fixed toolbar button margins in jdk 1.4.2.

modified the attachment filechooser to select for multiple files, now that
that's supported in swing.

added status messages while sending new messages.  this is to make sure that
users always know what the status of their outgoing messages is.

moved much of the send message code from the AWTEventThread to the 
OutgoingMailServer thread.

up and down arrows on ReadMessageWindows now scroll the ScrollPane.  

fixed the handling of incorrectly-formed multipart/alternative messages so 
that we display the content.

changed the default UserProfile handling so that if a message doesn't have 
a default UserProfile set, we use the default instead of returning null.

modified the resizing code for message tables so that we now just resize
the next column.

changed the display for some error message so that there's acutally a 
space between the message and the error code.

fixed a bug in which some message contents wouldn't should up in raw mode.

modified Attachment handing some so that we should now handle misconfigured
emails a little bit better.

no longer have to restart for change in IMAP synch with subscribed folders
setting.

added support for IMAP shared folders. -- tentative on javamail fix.

fixed the StoreInfo so that we now properly use the custom port for
IMAP/SSL.

fixed the FullMailcapCommandMap so that we support custom DataContentHandlers