@@ -72,12 +72,14 @@ MenuBar.Mail.Move.Label=Move Message
 MenuBar.Mail.Move.KeyBinding=M
 MenuBar.Mail.Copy.Label=Copy Message
 MenuBar.Mail.Copy.KeyBinding=C
+MenuBar.Mail.Bounce.Label=Bounce Message
+MenuBar.Mail.Bounce.KeyBinding=B
 MenuBar.Mail.Delete.Label=Delete Message(s)
 MenuBar.Mail.Delete.KeyBinding=D
 MenuBar.Mail.SearchFolder.Label=sEarch Folder
 MenuBar.Mail.SearchFolder.KeyBinding=E
-MenuBar.Mail.Subscribe.Label=suBscribe Folders
-MenuBar.Mail.Subscribe.KeyBinding=B
+MenuBar.Mail.Subscribe.Label=sUbscribe Folders
+MenuBar.Mail.Subscribe.KeyBinding=U
 
 MenuBar.Encryption.Label=Encryption
 MenuBar.Encryption.Encrypt.Label=Encrypt
@@ -283,6 +285,11 @@ info.smtpServer.outbox.waitForLock=SMTP server not available; waiting for outbox
 info.smtpServer.outbox.opening=SMTP server not available; opening outbox.
 info.smtpServer.outbox.appending=SMTP server not available; appending to outbox.
 info.smtpServer.sending=Sending message to server.
+
+message.bounceMessage.addresses=Bounce to address(es):
+message.bounceMessage.title=Bounce to addresses
+
+error.bounceMessage.addresses=Error parsing address entry.
 
 error.incorrectJavaVersion=Error running Pooka.  This version (1.1 beta) \nof Pooka requires a 1.4 JDK.  \nFor JDK 1.2 or 1.3, please use a release of Pooka 1.0.  \n\nPooka can be downloaded from\nhttp://pooka.sourceforge.net/\n\nYour JDK version:  
 error.FileNotFound=File Not Found
